# NPGC

./: LICENSE  README.md  pyproject.toml
src/npgc/: __init__.py  core.py
tests/: test_types.py  tests_basic.py  visual_datetime_report.py
