[project]
name = "npgc"
version = "0.1.0"
description = "Non-Parametric Gaussian Copula synthesizer for tabular data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gabriel Diaz" }]

dependencies = [
    "numpy",
    "pandas",
    "scipy"
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
