[project]
name = "npgc"
version = "0.2.0"
description = "Non-Parametric Gaussian Copula synthesizer for tabular data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gabriel Diaz" }]
license = "MIT"
keywords = ["data synthesis", "synthetic data", "gaussian copula", "privacy", "tabular data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/gdiaz95/NPGC"
Repository = "https://github.com/gdiaz95/NPGC"
Issues = "https://github.com/gdiaz95/NPGC/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npgc"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests_*.py"]
norecursedirs = [".git", ".venv", ".pytest_cache", "dist", "build", "pytest-cache-files-*"]
